# data-service

./: .env.sample  .gitattribues  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-dev-db  Dockerfile.neo4j  Makefile  README.md  api.env  api.env.sample  askem.dbml  copy_project.py  dataset-schema.json  dataset-schema.py  devbuild.sh  docker-bake.hcl  docker-compose.yml  env.sample  envfile  graph_relations.json  neo4j-start.sh  pyproject.toml  requirements.txt  upload_bio_models.py
.github/workflows/: ads.yaml  build_sql.yaml  ci.yaml  correctness.yaml  formatting.yaml  publish.yaml  test.yaml
data/: .version  001_schema.sql  002_data.sql
dev/tools/: copy_project.py  copy_project_other.py
docker/: Dockerfile  Dockerfile.migrations  Dockerfile.minio  Dockerfile.neo4j  Dockerfile.postgres  Dockerfile.test  docker-compose.yml
docker/overrides/: docker-compose.local.override.yml  docker-compose.testing.override.yml
docker/scripts/: populate-cache.cypher  run_migrations.sh  start-neo4j.sh  tds_test.sh
docs/data-model/: README.md  askem.dbml
julia/: Manifest.toml  Project.toml  README.md
julia/.openapi-generator/: FILES
julia/docs/: Association.md  BodyCreateQualifierDatasetsQualifiersPost.md  Concept.md  ConceptsApi.md  CreateFeatureDatasetsFeaturesPost201Response.md  CreateSoftwareExternalSoftwarePost201Response.md  Dataset.md  DatasetsApi.md  ExperimentalApi.md  ExternalApi.md  Feature.md  GraphqlApi.md  Id.md  IndependentParameter.md  Intermediate.md  IntermediateFormat.md  IntermediateSource.md  Model.md  ModelContent.md  ModelFramework.md  ModelOperations.md  ModelOptPayload.md  ModelsApi.md  OntologicalField.md  OntologyConcept.md  ParametersApi.md  Person.md  PersonsApi.md  Plan.md  Project.md  ProjectsApi.md  Provenance.md  ProvenanceApi.md  ProvenancePayload.md  ProvenanceSearchTypes.md  ProvenanceType.md  Publication.md  Qualifier.md  RelationType.md  ResourceType.md  (+7 more)
julia/src/: APIClient.jl  modelincludes.jl
migrate/: alembic.ini  alembic.py  alembic_setup.sql  env.py  requirements.txt  run_migrations.sh  script.py.mako  seed_data.py  start_elasticsearch.py
migrate/scripts/: enums.py  file_storage.py  seed_data.py  start_elasticsearch.py
migrate/seeds/: files.json
migrate/versions/: 0c372ef781b7_update_provenance_ids.py  139b9ec56f3e_fix_data_path.py  1a3cf96fb50f_add_artifact_to_enums.py  1f5853959c65_init_db.py  2e9a3d2ffe83_20230512194221.py  2e9a3d2ffe83_update_model_id_types.py  3b83515b53b8_use_utc_in_pydantic.py  59c1b5f9a187_20230512190235.py  5f6fd77df888_fix_data_path_2.py  895deab7e80c_update_project_asset_with_string_id.py  8bc64811769c_make_maintainers_nullable.py  b9e9469640b6_add_data_path_to_datasets.py  ccda18616179_connect_revisions_to_intermediates.py  d6ec58f4fd9a_add_publication_metadata.py  eee465a0b5a2_attach_models_to_intermediates.py  f905fe63226c_add_code_project_asset.py
migrations/: README.md  alembic.ini  env.py  es.py  run_migrations.sh  script.py.mako  storage.py
migrations/scripts/: start_elasticsearch.py
migrations/versions/: 030bffd9ef5a_prepopulate_data_from_seed_files.py  2e5038df65a1_add_documents_to_resourcetype_enum.py  b3bdf1b266ff_sync_db_with_code.py  b796846784ce_add_provenance_support_for_documents.py  b9e1a8e285ba_adds_equations_index.py  bf6efc7e4e34_squashed_2023-09-15.py  d28ca1c911be_es_dataset_index_migration.py  d55d79761071_reindex_documents_es_no_index_metadata.py  f905fe63226c_squashed_2023-09-15.py
old_tests/: search.py  service.py  suite.py
scripts/: create_functions.py  data-service-dev-db.sql  demo_dataset_generator.py  evaluation_scenarios.py  exemplar_dataset_generator.py  init-data-service-dev-db.sh  json_to_csv.py  populate.py  provenance_fake_data.py  sim_runs_dataset_generator.py  sim_runs_json_to_csv.py  upload_demo_data.py  upload_starter-kit_models.py  upload_starter_kit_models.py  util.py  xdd_mapping.json  xdd_title.py
src/: api_schema.py  main.py  modules.py  requirements.txt  server.py  settings.py  test_main.py
src/autogen/: README.md  info.json  orm.py  schema.py
src/builder/: fix.py  gen.py
src/config/: db.py  schema.py  settings.py
src/db/: __init__.py  engine.py  helpers.py
src/generation/: fix.py  gen.py
src/operation/: create.py  delete.py  retrieve.py  update.py
src/routers/: admin.py  associations.py  concepts.py  datasets.py  features.py  models.py  persons.py  projects.py  provenance.py  qualifiers.py  settings.py  (+2 more)
tds/: main.py  settings.py
tests/: conftest.py  crud.py  helpers.py  main.py  migrations.py  service.py  suite.py  unittest.py  utils.py
(+600 files in other folders)
