[tool.poetry]
name = "ads"
version = "0.1.1"
description = "The API that sits on top of the data store for the ASKEM program."
authors = ["Five Grant <five@jataware.com>"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DARPA-ASKEM/data-store-api/issues"

[tool.poetry.dependencies]
python = "^3.10"
dbml-builder = "^0.2.2"
sqlalchemy = "^1.4.42"
pydantic = "^1.10.2"
pylint = "^2.15.5"


[tool.poetry.scripts]
ads = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
