[tool.poetry]
name = "tds"
version = "0.3.11"

description = "The API that sits on top of the data store for the ASKEM program."
authors = ["Five Grant <five@jataware.com>"]
readme = "README.md"
packages = [{include = "tds"}, {include="tests"}]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DARPA-ASKEM/data-store-api/issues"

[tool.poetry.dependencies]
python = "^3.10"
dbml-builder = "^0.3.0"
sqlalchemy = "^1.4.42"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
click = "^8.1.3"
requests = "^2.28.1"
neo4j = "^5.2.0"
pyarrow = "^10.0.0"
fsspec = "^2022.11.0"
python-multipart = "^0.0.5"
pandas = "^1.5.2"
minio = "^7.1.12"
openai = "^0.25.0"
s3fs = "^2022.11.0"
botocore = "1.27.59"
boto3 = "1.24"
psycopg2 = "^2.9.5"
alembic = "^1.9.4"
elasticsearch = {extras = ["async"], version = "8.5.3"}
jsonschema = "^4.18.3"

[tool.poetry.scripts]
tds = "tds.main:cli"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pre-commit = "^3.1.1"
pytest-alembic = "^0.10.0"
pytest-mock-resources = "^2.6.8"
python-on-whales = "^0.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.isort]
profile = "black"
#skip = ["autogen"]

#[tool.black]
#force-exclude = "autogen"

[tool.pytest.ini_options]
addopts = "--ignore-glob=*utils.py"
python_files = ["tests/service.py", "tests/unittest.py", "tests/search.py", "tests/migrations.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pylint.master]
# Since the data store is part of an R&D project, it makes sense to move fast
# and leave TODOs for later.
disable=["fixme", "too-few-public-methods", "broad-exception-raised"]
# Pylint should not run on the the generated files
#ignore=["autogen"]
extension-pkg-whitelist=["pydantic"]
jobs=4

[tool.pylint.basic]
good-names=["id", "type", "es"]

[tool.pylint.variables]
allowed-redefined-builtins=["id", "type"]

[tool.pylint.format]
max-line-length=88
